RESOLVED FIXED103131
[EFL][AC] Mouse cursor is not updated when accelerated compositing is enabled
https://bugs.webkit.org/show_bug.cgi?id=103131
Summary [EFL][AC] Mouse cursor is not updated when accelerated compositing is enabled
Chris Dumez
Reported 2012-11-23 05:46:22 PST
The mouse cursor is no longer updated after we enabled acelerated compositing. I will fix it.
Attachments
Patch (1.91 KB, patch)
2012-11-23 05:50 PST, Chris Dumez
no flags
Patch (1.90 KB, patch)
2012-11-23 05:53 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-11-23 05:50:59 PST
Chris Dumez
Comment 2 2012-11-23 05:53:58 PST
Created attachment 175788 [details] Patch Improved #if condition to use USE().
WebKit Review Bot
Comment 3 2012-11-23 06:23:38 PST
Comment on attachment 175788 [details] Patch Clearing flags on attachment: 175788 Committed r135604: <http://trac.webkit.org/changeset/135604>
WebKit Review Bot
Comment 4 2012-11-23 06:23:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.