[EFL][AC] Mouse cursor is not updated when accelerated compositing is enabled https://bugs.webkit.org/show_bug.cgi?id=103131

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-23
Reviewed by Kenneth Rohde Christiansen.

Make sure we try to get the Ecore_X_Window using ecore_evas_gl_x11_window_get()
in applyFallbackCursor() if accelerated compositing is enabled instead of
using ecore_evas_software_x11_window_get(). This fixes mouse cursor update
when accelerated compositing is enabled.

No new tests, no behavior change for layout tests.

* platform/efl/EflScreenUtilities.cpp:
(WebCore::applyFallbackCursor):

Canonical link: https://commits.webkit.org/121265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135604 268f45cc-cd09-0410-ab3c-d52691b4dbfc